Add SEO metadata

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,47 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.webp" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <!-- Charset & Viewport -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Title (Critical for SEO) -->
+  <title>SaaS Landing Page | Modern React Application</title>
+
+  <!-- Primary SEO Meta -->
+  <meta name="description"
+    content="Modern SaaS landing page built with React and Vite. Fast, responsive, and optimized for performance and user experience." />
+  <meta name="robots" content="index, follow" />
+  <meta name="author" content="GL TECH" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://your-domain.vercel.app/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/webp" href="/logo.webp" />
+
+  <!-- Open Graph (Social Sharing) -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="SaaS Landing Page | React + Vite" />
+  <meta property="og:description" content="High-performance SaaS landing page built with React and Vite." />
+  <meta property="og:url" content="https://your-domain.vercel.app/" />
+  <meta property="og:image" content="https://your-domain.vercel.app/og-image.webp" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SaaS Landing Page | React + Vite" />
+  <meta name="twitter:description" content="High-performance SaaS landing page built with React and Vite." />
+  <meta name="twitter:image" content="https://your-domain.vercel.app/og-image.webp" />
+
+  <!-- Performance Hints -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
